fixed messages overflow
finally ready to work on quiz portion

--- a/whos_that_pokemon/src/component/lobby_page/chat_box/chatbox.css
+++ b/whos_that_pokemon/src/component/lobby_page/chat_box/chatbox.css
@@ -2,6 +2,9 @@
   background-color: white;
   height: 400px;
   width: 100%;
+  overflow-y: scroll;
+  display: flex;
+  flex-direction: column-reverse;
 }
 .message-box {
   width: 100%;
